Added Pagination Support

--- a/app/views/display.scala.html
+++ b/app/views/display.scala.html
@@ -38,6 +38,10 @@
             {comment.postedAt.format("dd MMM yy")}
           </span>
         </div>
+        <div class="comment-content">
+          <div class="about">Detail: </div>
+            {comment.content}
+        </div>
       </div>
     }}
   </div>
