--- a/app/views/show.scala.html
+++ b/app/views/show.scala.html
@@ -1,4 +1,4 @@
-@(post: Post, commentForm: Form[CommentForm])
+@(post: Post, commentForm: Form[CommentForm], randomID: String)
 @import helper._
 
 @main(post.title){
@@ -18,9 +18,13 @@
          <li>
         }
     </ul>
+    @if(flash.contains("success")) {
+      <p class="success">@flash.get("success")</p>
+    }
+    
     @display(post, mode = "full")
     
-    @form(routes.Application.postComment(post.id)) {
+    @form(routes.Application.postComment(post.id, randomID)) {
       <fieldset>
         <legend>Post a comment</legend>
           @inputText(
@@ -36,8 +40,28 @@
             '_label -> "Comment:"
           )
           <p>
+            <label for="code">Please type the code below: </label>
+            <img src="@routes.Application.captcha(randomID)" />
+            <br />
+            <input type="text" name="code" id="code" size="18" value="" />
+            <input type="hidden" name="randomID" value="@randomID" />
+          </p>
+          <p>
             <input type="submit" value="Submit your comment" />
           </p>
       </fieldset>
     }
+    <script type="text/javascript" charset="utf-8">
+      $(function() {
+        $('form').click(function() {
+          $('form').expose({api: true}).load();
+        });
+        
+        if($('form .errors').size()) {
+          alert("Screwd\n");
+          $('form').expose({api: true, loadSpeed: 0}).load();
+          $('form input[type=text]').get(0).focus();
+        }
+      });
+    </script>
 }
