--- a/app/views/display.scala.html
+++ b/app/views/display.scala.html
@@ -22,7 +22,7 @@
         @if(!post.tags.isEmpty) {
           -Tagged
           @post.tags.map{ tag =>
-            <a href="@routes.Application.listTagged(tag.name)">@tag</a>         
+            <a href="@routes.Application.listTagged(tag.name)">@tag.name</a>         
           }
         }
       </span>
