--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -58,6 +58,7 @@ body {
     -webkit-border-radius: 16px;
     -webkit-box-shadow: 0 2px 0 #93A045;
     -moz-border-radius: 16px;
+	border-radius: 16px;
 }
 
 /** A little hacky to create arrows without images **/
@@ -98,6 +99,7 @@ body {
     background: -webkit-gradient(linear, left top, left 30%, from(#314660), to(#364B66));
     -webkit-border-radius: 16px;
     -moz-border-radius: 16px;
+	border-radius: 16px;
     padding: 20px;
 }
 
@@ -136,6 +138,7 @@ body {
     margin: 10px 0 50px 0;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
+	border-radius: 10px;
     -webkit-box-shadow: 0 2px 0 #BBBBBB;
 }
 
@@ -238,6 +241,7 @@ h3 span {
     padding: 10px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
+	border-radius: 10px;
 }
 
 .comment .about {
@@ -262,6 +266,7 @@ form {
     background: -webkit-gradient(linear, left top, left 60%, from(#253142), to(#364B66));
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
+	border-radius: 10px;
 }
 
 form .error {
@@ -271,6 +276,7 @@ form .error {
     padding: 3px 5px;
     -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
+	border-radius: 6px;
     -webkit-box-shadow: 0 2px 0 #800;
 }
 
@@ -306,6 +312,7 @@ form label {
     padding: 10px;
     -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
+	border-radius: 6px;
     -webkit-box-shadow: 0 2px 0 #4E840B; 
 }
 
@@ -387,6 +394,7 @@ form label {
     padding: 2px 10px;
     -webkit-border-radius: 9px;
     -moz-border-radius: 9px;
+	border-radius: 9px;
 }
 
 #adminMenu li.selected a {
@@ -458,6 +466,8 @@ tr.odd {
 .crudFlash {
     border: 0;
     -webkit-border-radius: 8px;
+	-moz-border-radius: 8px;
+	border-radius: 8px;
     font-size: 80%;
     padding: 2px 10px;
 }
@@ -465,6 +475,7 @@ tr.odd {
 .crudField .tag.selected {
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
+	border-radius: 8px;
 }
 
 .crudField .error {
@@ -482,6 +493,7 @@ tr.odd {
     border: 0 !important;
     -webkit-border-radius: 16px;
     -moz-border-radius: 16px;
+	border-radius: 16px;
 }
 
 #login label, #password-field label, #username-field label {
@@ -520,6 +532,7 @@ tr.odd {
     background: #C88116;
     -webkit-border-radius: 12px;
     -moz-border-radius: 12px;
+	border-radius: 12px;
     padding: 5px 10px;
     font-size: 80%;
     text-decoration: none;
@@ -532,6 +545,7 @@ tr.odd {
     background: #7D510E;
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
+	border-radius: 8px;
     padding: 0 5px 2px 5px;
     position: relative;
     top: -1px;
