--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -56,9 +56,11 @@ body {
     color: #3C4313;
     position: relative;
     -webkit-border-radius: 16px;
-    -webkit-box-shadow: 0 2px 0 #93A045;
     -moz-border-radius: 16px;
 	border-radius: 16px;
+    -webkit-box-shadow: 0 2px 0 #93A045;
+	-moz-box-shadow: 0 2px 0 #93A045;
+	box-shadow: 0  2px 0 #93A045;
 }
 
 /** A little hacky to create arrows without images **/
@@ -140,6 +142,8 @@ body {
     -moz-border-radius: 10px;
 	border-radius: 10px;
     -webkit-box-shadow: 0 2px 0 #BBBBBB;
+	-moz-box-shadow: 0 2px 0 #BBBBBB;
+	box-shadow:  0 2px 0 #BBBBBB;
 }
 
 .post .about {
@@ -278,6 +282,8 @@ form .error {
     -moz-border-radius: 6px;
 	border-radius: 6px;
     -webkit-box-shadow: 0 2px 0 #800;
+	-moz-box-shadow: 0 2px 0 #800;
+	box-shadow: 0 2px 0 #800;
 }
 
 form p {
@@ -313,7 +319,9 @@ form label {
     -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
 	border-radius: 6px;
-    -webkit-box-shadow: 0 2px 0 #4E840B; 
+    -webkit-box-shadow: 0 2px 0 #4E840B;
+	-moz-box-shadow: 0 2px 0 #4E840B;
+	box-shadow: 0 2px 0 #4E840B;
 }
 
 /** Pagination **/
@@ -533,12 +541,14 @@ tr.odd {
     -webkit-border-radius: 12px;
     -moz-border-radius: 12px;
 	border-radius: 12px;
+    -webkit-box-shadow: 1px 1px 2px rgba(0,0,0,.3);
+	-moz-box-shadow: 1px 1px 2px rgba(0,0,0,.3);
+	box-shadow: 1px 1px 2px rgba(0,0,0,.3);
     padding: 5px 10px;
     font-size: 80%;
     text-decoration: none;
     color: #fff;
     font-weight: bold;
-    -webkit-box-shadow: 1px 1px 2px rgba(0,0,0,.3);
 }
 
 #newPost a span {
